--- a/config/weinreb_config.yaml
+++ b/config/weinreb_config.yaml
@@ -1,7 +1,7 @@
 # Runtime parameters
 use_pinn: false # whether to use PINN to refine the score network, if set to false, keep the score network from the pretraining phase unchanged
 sample_with_replacement: false # Whether or not to sample with replacement.
-device: 'cpu' # device to run the model
+device: 'cuda' # device to run the model
 sample_size: 1024 # number of samples to use for training
 
 exp:
