--- a/config/simulation_config.yaml
+++ b/config/simulation_config.yaml
@@ -5,7 +5,7 @@ device: 'cuda' # device to run the model
 sample_size: 400 # number of samples to use for training
 
 exp:
-  name: 'emt_experiment'  # experiment name
+  name: 'simulation_experiment'  # experiment name
   output_dir: 'results'  # base output directory for all experiments
 
 data:
@@ -32,7 +32,7 @@ score_train:
   epochs: 1001 # number of epochs for score matching
   lr: 0.0001 # learning rate for score matching
   lambda_penalty: 1 # weight for penalty
-  sigma: 0.1 # strength of noise
+  sigma: 0.05 # strength of noise
 
 train:
   epochs: 200 # number of epochs for final training
