--- a/config/eb_config.yaml
+++ b/config/eb_config.yaml
@@ -2,7 +2,7 @@
 use_pinn: false # whether to use PINN to refine the score network, if set to false, keep the score network from the pretraining phase unchanged
 sample_with_replacement: false # Whether or not to sample with replacement.
 device: 'cuda' # device to run the model
-sample_size: 1024 # number of samples to use for training
+sample_size: 1000 # number of samples to use for training
 
 exp:
   name: 'eb_experiment'  # experiment name
@@ -34,6 +34,7 @@ score_train:
   lr: 0.0001 # Learning rate for score matching
   lambda_penalty: 1 # Weight for penalty
   sigma: 0.1 # Strength of noise
+  score_batch_size: 512 # Batch size for score training
 
 train:
   epochs: 500 # Number of epochs for final training
